updated voluntary experience and skills

--- a/index.html
+++ b/index.html
@@ -175,12 +175,14 @@ effective monitoring of cases and escalation of issues when required</li>
 
           <h3 class="section-title">Technical Skills</h3>
           <ul class="list-unstyled general-list">
-            <li>Redmine</li>
-            <li>Dokuwiki</li>
-            <li>Sketchup</li>
+            <li>Web development: HTML5 | CSS | Bootstrap | jQuery | Git | Github</li>
             <li>Microsoft Office products: Word | Excel | Powerpoint | Outlook</li>
             <li>Google Products: Drive | Docs | Sheets | Slides | Forms | Drawings | Maps | Sites</li>
             <li>Salesforce</li>
+            <li>Redmine</li>
+            <li>Dokuwiki</li>
+            <li>Sketchup</li>
+            <li>Six Sigma</li>
 
           <h3 class="section-title">Language Skills</h3>
           <ul class="list-unstyled general-list">
@@ -195,7 +197,7 @@ effective monitoring of cases and escalation of issues when required</li>
 
           <h3 class="section-title">Volunteer Experience</h3>
           <h5 class="company">Living Ability Not Disability</h5>
-          <p class="course-title">Carer & Companion</p>
+          <p class="course-title">Social Media Promoter, Carer & Companion</p>
           <p class="dates">2005 to present</p>
 
 
