--- a/index.html
+++ b/index.html
@@ -179,10 +179,11 @@ effective monitoring of cases and escalation of issues when required</li>
             <li>Microsoft Office products: Word | Excel | Powerpoint | Outlook</li>
             <li>Google Products: Drive | Docs | Sheets | Slides | Forms | Drawings | Maps | Sites</li>
             <li>Salesforce</li>
-            <li>Redmine</li>
+            <li>Project Management Tools: Scrum | Redmine</li>
             <li>Dokuwiki</li>
             <li>Sketchup</li>
             <li>Six Sigma</li>
+          </ul>
 
           <h3 class="section-title">Language Skills</h3>
           <ul class="list-unstyled general-list">
