reinstated code accidentally deleted

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <p class="job-title">Junior Front End Web Developer</p>
           <p class="dates">2018 to present</p>
           <ul class="job-description">
-            <li>website Development</li>
+            <li>website development</li>
             <li>use current latest web technologies and trends: HTML5 | CSS | Bootstrap | JavaScript</li>
           </ul>
 
