updated design and inserted footer

--- a/playground.html
+++ b/playground.html
@@ -21,13 +21,13 @@
       <a class="nav-link" href="index.html">CV</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Contact</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>
+      <a class="nav-link" href="contact.html">Contact</a>
     </li>
   </ul>
     </nav>
+    <div id="main-page">
+
+
   <table>
     <tr>
       <td>
@@ -38,8 +38,10 @@
       </td>
     </tr>
   </table>
+  </div>
 </body>
-<footer>
-  
-</footer>
+<footer class="page-footer font-small">
+    <div class="footer-copyright text-center py-3"><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /><br></a>Personal Curriculum Vitae by Aimee Fenech is licensed under a <a class="links" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License.</a>
+    </div>
+  </footer>
 </html>
