--- a/playground.html
+++ b/playground.html
@@ -1,9 +1,10 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-<link rel="stylesheet" href="playground.css"  type="text/css">
-<link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+  <link rel="stylesheet" href="playground.css"  type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Clicker+Script" rel="stylesheet">
 </head>
 <body>
   <div id="header">
@@ -11,37 +12,130 @@
   </div>
   <nav>
     <ul class="nav nav-tabs">
-    <li class="nav-item">
-      <a class="nav-link active" href="#">Current Projects</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Past experiments</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="index.html">CV</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="contact.html">Contact</a>
-    </li>
-  </ul>
-    </nav>
-    <div id="main-page">
-
-
-  <table>
-    <tr>
-      <td>
-      </td>
-      <td>
-      </td>
-      <td>
-      </td>
-    </tr>
-  </table>
+      <li class="nav-item">
+        <a class="nav-link active" href="#">Current Projects</a>
+      </li>
+      <li hidden class="nav-item">
+        <a class="nav-link" href="#">Past experiments</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="index.html">CV</a>
+      </li>
+      <li hidden class="nav-item">
+        <a class="nav-link" href="contact.html">Contact</a>
+      </li>
+    </ul>
+  </nav>
+  <div id="main-page" class="container">
+    <br />
+    <h4>Rio Laden - Color palette options:</h4>
+    <div class="card-columns">
+    <div class="card">
+    <table class="color-table">
+      <tr>
+        <td colspan="4" class="card-header center">A</td>
+      </tr>
+      <tr>
+        <td class="sample a-primary-1"></td>
+        <td class="sample a-primary-2"></td>
+        <td class="sample a-primary-0"></td>
+        <td class="sample a-primary-3"></td>
+      </tr>
+      <tr>
+        <td class="sample sample-1 a-primary-1" colspan="2">
+          <div class="white">#5fa718ff</div>
+          <div class="black">#5fa718ff</div>
+        </td>
+        <td class="sample sample-2 a-primary-2" colspan="2">
+          <div class="white">#e44b4dff</div>
+          <div class="black">#e44b4dff</div>
+        </td>
+      </tr>
+      <tr>
+        <td class="sample sample-0 a-primary-0" colspan="2">
+          <div class="white">#3d4c50ff</div>
+          <div class="black">#3d4c50ff</div>
+        </td>
+        <td class="sample sample-3 a-primary-3" colspan="2">
+          <div class="white">#f2b6b5ff</div>
+          <div class="black">#f2b6b5ff</div>
+        </td>
+      </tr>
+    </table>
   </div>
-</body>
-<footer class="page-footer font-small">
-    <div class="footer-copyright text-center py-3"><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /><br></a>Personal Curriculum Vitae by Aimee Fenech is licensed under a <a class="links" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License.</a>
+  <div class="card">
+    <table class="color-table">
+      <tr>
+        <td colspan="4" class="card-header center">B</td>
+      </tr>
+        <tr>
+          <td class="sample a-secondary-1-1"></td>
+          <td class="sample a-secondary-1-2"></td>
+          <td class="sample a-secondary-1-0"></td>
+          <td class="sample a-secondary-1-3"></td>
+        </tr>
+        <tr>
+          <td class="sample sample-1 a-secondary-1-1" colspan="2">
+            <div class="white">#781714ff</div>
+            <div class="black">#781714ff</div>
+          </td>
+          <td class="sample sample-2 a-secondary-1-2"colspan="2">
+            <div class="white">#eb4135ff</div>
+            <div class="black">#eb4135ff</div>
+          </td>
+        </tr>
+        <tr>
+          <td class="sample sample-0 a-secondary-1-0"colspan="2">
+            <div class="white">#6BA3A3</div>
+            <div class="black">#6BA3A3</div>
+          </td>
+          <td class="sample sample-3 a-secondary-1-3"colspan="2">
+            <div class="white">#447811ff</div>
+            <div class="black">#447811ff</div>
+          </td>
+        </tr>
+      </table>
+    </div>
+    <div class="card">
+      <table class="color-table">
+        <tr>
+          <td colspan="4" class="card-header center">C</td>
+        </tr>
+        <tr>
+          <td class="sample a-secondary-2-1"></td>
+          <td class="sample a-secondary-2-2"></td>
+          <td class="sample a-secondary-2-0"></td>
+          <td class="sample a-secondary-2-3"></td>
+        </tr>
+        <tr>
+          <td class="sample sample-1 a-secondary-2-1" colspan="2">
+            <div class="white">#c4352fff</div>
+            <div class="black">#c4352fff</div>
+          </td>
+          <td class="sample sample-2 a-secondary-2-2" colspan="2">
+            <div class="white">#3d4c50ff</div>
+            <div class="black">#3d4c50ff</div>
+          </td>
+        </tr>
+        <tr>
+          <td class="sample sample-0 a-secondary-2-0" colspan="2">
+            <div class="white">#447811ff</div>
+            <div class="black">#447811ff</div>
+          </td>
+          <td class="sample sample-3 a-secondary-2-3" colspan="2">
+            <div class="white">#5fa718ff</div>
+            <div class="black">#5fa718ff</div>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </div>
+</div>
+</div>
+  <br />
+  </body>
+  <footer class="page-footer font-small">
+    <div class="footer-copyright text-center py-3"><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /><br></a>Website by Aimee Fenech - licensed under a <a class="links" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License.</a>
     </div>
   </footer>
-</html>
+  </html>
