contact form fixed and css for footer fixed

--- a/playground.html
+++ b/playground.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="playground.css"  type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Clicker+Script" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 </head>
 <body>
   <div id="header">
@@ -21,8 +22,8 @@
       <li class="nav-item">
         <a class="nav-link" href="index.html">CV</a>
       </li>
-      <li hidden class="nav-item">
-        <a class="nav-link" href="contact.html">Contact</a>
+      <li class="nav-item">
+        <a class="nav-link" href="contact.html"><i class="fas fa-envelope"></i></a>
       </li>
     </ul>
   </nav>
@@ -135,7 +136,7 @@
   <br />
   </body>
   <footer class="page-footer font-small">
-    <div class="footer-copyright text-center py-3"><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /><br></a>Website by Aimee Fenech - licensed under a <a class="links" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License.</a>
-    </div>
-  </footer>
+      <div class="footer-copyright text-center py-3">Website by Aimee Fenech is licensed under a <a class="links" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License.</a>
+      </div>
+    </footer>
   </html>
