updated new roles and membership details

--- a/index.html
+++ b/index.html
@@ -82,6 +82,16 @@
             <li>use current latest web technologies and trends: HTML5 | CSS | Bootstrap | JavaScript</li>
           </ul>
 
+          <h5 class="company">Freelance</h5>
+          <p class="job-title">Permaculture Educator</p>
+          <p class="dates">2015 to present</p>
+          <ul class="job-description">
+            <li>Permaculture Garden Planning & Design</li>
+            <li>Compost Toilet Design</li>
+            <li>Humanure management</li>
+            <li>Preservation of food</li>
+          </ul>
+
           <h5 class="company">Blevins Franks Financial Management Ltd.</h5>
           <p class="job-title">Administration Manager</p>
           <p class="dates">2015 to 2017</p>
@@ -194,13 +204,17 @@ effective monitoring of cases and escalation of issues when required</li>
             <li>German  | Learning </li>
           </ul>
 
-
+          <h3 class="section-title">Memberships</h3>
+          <h5 class="company">Permaculture International Research Network</h5>
+          <h5 class="company">Permaculture Association</h5>
 
           <h3 class="section-title">Volunteer Experience</h3>
+          <h5 class="company">Hackerspaces.org</h5>
+          <p class="course-title">Blog Editor, Project Manager for the Great Census of 2019</p>
+          <p class="dates">2018 to present</p>
           <h5 class="company">Living Ability Not Disability</h5>
           <p class="course-title">Social Media Promoter, Carer & Companion</p>
           <p class="dates">2005 to present</p>
-
 
           <h3 class="section-title">Personal Interests</h3>
           <ul class="personal-interests list-unstyled">
