small aesthetic correction

--- a/index.html
+++ b/index.html
@@ -205,8 +205,10 @@ effective monitoring of cases and escalation of issues when required</li>
           </ul>
 
           <h3 class="section-title">Memberships</h3>
-          <h5 class="company">Permaculture International Research Network</h5>
-          <h5 class="company">Permaculture Association</h5>
+          <ul class="list-unstyled general-list">
+          <li>Permaculture International Research Network</li>
+          <li>Permaculture Association</li>
+          </ul>
 
           <h3 class="section-title">Volunteer Experience</h3>
           <h5 class="company">Hackerspaces.org</h5>
