changes to contact form link to cv and button text

--- a/contact.html
+++ b/contact.html
@@ -12,13 +12,13 @@
   <nav>
     <ul class="nav nav-tabs">
     <li class="nav-item">
-      <a class="nav-link active" href="contact.html">Make it a good one!</a>
+      <a class="nav-link active" href="contact.html">Talk to me</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="playground.html">Current Projects</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="index.html">CV</a>
+      <a class="nav-link" href="cv.html">CV</a>
     </li>
   </ul>
     </nav>
