updated link to projects

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
       <a class="nav-link active" href="contact.html">Talk to me</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="playground.html">Current Projects</a>
+      <a class="nav-link" href="index.html">Current Projects</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="cv.html">CV</a>
