--- a/index.html
+++ b/index.html
@@ -30,13 +30,16 @@
   <div id="main-page" class="container">
     <br />
     <div class="card-columns">
-      <a href="https://rioladen-wittstock.de/" target="_blank"><div class="card"></a>
+      <a href="https://rioladen-wittstock.de/" target="_blank" class="links">
+        <div class="card">
         <img class="card-img-top" src="img/rl1.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Rio Laden</h5>
-          <p class="card-text">Organic & Regional Shop in Wittstock, website built using Wordpress Opensource theme adapted for use case and includes, integrated OSM Map and private forum funtion.</p>
+          <p class="card-text">Organic & Regional Shop in Wittstock, website built using Wordpress Opensource theme adapted for use case and includes, integrated OSM Map and private forum function.</p>
         </div>
       </div>
+      </a>
+      <a href="https://ecohackerfarm.org/" target="_blank" class="links">
       <div class="card">
         <img class="card-img-top" src="img/ehf1.png" alt="Card image cap">
         <div class="card-body">
@@ -44,6 +47,16 @@
           <p class="card-text">A Network of projects that combine permaculture with hackerculture, online and onsite. Website mostly hardcoded, built with Bootstrap and some JavaScript.</p>
         </div>
       </div>
+    </a>
+    <a href="https://aimeefenech.com/cv" target="_blank" class="links">
+      <div class="card">
+      <img class="card-img-top" src="img/rl1.png" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">Aimee's CV</h5>
+        <p class="card-text">Personal Curriculum Vitae, using simple HTML5, CSS and Bootsrap,formatted to be easily printed or pdfed as required.</p>
+      </div>
+    </div>
+    </a>
     </div>
   </div>
   <br />
