addition of cv project

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </a>
     <a href="https://aimeefenech.com/cv" target="_blank" class="links">
       <div class="card">
-      <img class="card-img-top" src="img/rl1.png" alt="Card image cap">
+      <img class="card-img-top" src="img/cv.png" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">Aimee's CV</h5>
         <p class="card-text">Personal Curriculum Vitae, using simple HTML5, CSS and Bootsrap,formatted to be easily printed or pdfed as required.</p>
