small cosmetic changes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 </head>
 <body>
+  <div class="content">
   <div id="header">
     <h2>Aimee's playground</h2>
   </div>
@@ -29,6 +30,7 @@
   </nav>
   <div id="main-page" class="container">
     <br />
+    <div class="row">
     <div class="card-columns">
       <a href="https://rioladen-wittstock.de/" target="_blank" class="links">
         <div class="card">
@@ -59,10 +61,12 @@
     </a>
     </div>
   </div>
+  </div>
   <br />
     <footer class="page-footer font-small">
       <div class="footer-copyright text-center py-3">Website by Aimee Fenech is licensed under a <a class="links" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License.</a>
       </div>
     </footer>
+  </div>
   </body>
   </html>
