broken link fixed, google fonts reinstated

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <link href="css/mdb.min.css" rel="stylesheet">
   <!-- Your custom styles (optional) -->
   <link href="css/playground.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Clicker+Script" rel="stylesheet">
 </head>
 
 <body>
@@ -59,7 +61,7 @@
         </div>
       </div>
     </a>
-    <a href="https://aimeefenech.com/cv" target="_blank" class="links">
+    <a href="https://aimeefenech.com/cv.html" target="_blank" class="links">
       <div class="card">
       <img class="card-img-top" src="img/cv.png" alt="Card image cap">
       <div class="card-body">
