minor amend with google fonts

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <!-- Material Design Bootstrap -->
   <link href="css/mdb.min.css" rel="stylesheet">
-  <!-- Your custom styles (optional) -->
-  <link href="css/playground.css" rel="stylesheet">
+  <!-- Google fonts-->
   <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Clicker+Script" rel="stylesheet">
+  <!-- Your custom styles (optional) -->
+  <link href="css/playground.css" rel="stylesheet">
 </head>
 
 <body>
