fixed fonts issue and added german phone number

--- a/cv.html
+++ b/cv.html
@@ -14,6 +14,9 @@
   <link href="css/mdb.min.css" rel="stylesheet">
   <!-- Your custom styles (optional) -->
   <link href="css/cv.css" rel="stylesheet">
+  <!-- Google fonts-->
+  <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
 </head>
 
   <body>
@@ -26,8 +29,9 @@
         <ul id="social-media" class="list-unstyled">
           <li><a href="https://github.com/aimeejulia" target="_blank" class="links"><i class="fab fa-github-square"></i> /aimeejulia</a></li>
           <li><a href="https://www.linkedin.com/in/aimee-fenech-84a3562a/" target="_blank" class="links"><i class="fab fa-linkedin"></i> /aimee-fenech</a></li>
-          <li><a href="mailto:aimee@ecohackerfarm.org"  class="links"><i class="fas fa-at"></i> aimee@ecohackerfarm.org</a>
-          <li><a class="links"><i class="fas fa-mobile-alt"></i>       +356 99210667</a></li>
+          <li><a href="mailto:mail@aimeefenech.com"  class="links"><i class="fas fa-at"></i> aimee@ecohackerfarm.org</a>
+          <li><a class="links"><i class="fas fa-mobile-alt"></i>       +356 99 210 667</a></li>
+          <li><a class="links"><i class="fas fa-mobile-alt"></i>       +49 176 6909 7886</a></li>
 
         <ul class="list-unstyled center">
           <li><a class="address"><i class="fas fa-envelope"></i></li>
