cosmetic changes to sidebar, still not completely happy with it

--- a/cv.html
+++ b/cv.html
@@ -25,24 +25,25 @@
     <div class="col-md-4" id="sidebar">
         <img src="img/aimee.jpeg" alt="Aimee" id="profile-picture">
         <h1 id="name">Aimee Fenech</h1>
+        <br />
         <p id="profile-statement">An experienced data compliance officer and project manager who masters new skills quickly and readily takes up challenges. Specialised in management and co-ordination of teams for projects and target orientated tasks.</p>
-        <ul id="social-media" class="list-unstyled">
-          <li><a href="https://github.com/aimeejulia" target="_blank" class="links"><i class="fab fa-github-square"></i> /aimeejulia</a></li>
-          <li><a href="https://www.linkedin.com/in/aimee-fenech-84a3562a/" target="_blank" class="links"><i class="fab fa-linkedin"></i> /aimee-fenech</a></li>
-          <li><a href="mailto:mail@aimeefenech.com"  class="links"><i class="fas fa-at"></i> aimee@ecohackerfarm.org</a>
-          <li><a class="links"><i class="fas fa-mobile-alt"></i>       +356 99 210 667</a></li>
-          <li><a class="links"><i class="fas fa-mobile-alt"></i>       +49 176 6909 7886</a></li>
-
-        <ul class="list-unstyled center">
-          <li><a class="address"><i class="fas fa-envelope"></i></li>
-
+        <br />
+        <div id="social-media">
+          <ul class="list-unstyled center">
+            <li><a href="https://github.com/aimeejulia" target="_blank" class="links"><i class="fab fa-github-square"></i> /aimeejulia</a></li>
+            <li><a href="https://www.linkedin.com/in/aimee-fenech-84a3562a/" target="_blank" class="links"><i class="fab fa-linkedin"></i> /aimee-fenech</a></li>
+            <li><a href="mailto:mail@aimeefenech.com"  class="links"><i class="fas fa-at"></i> aimee@ecohackerfarm.org</a>
+            <li><a class="links"><i class="fas fa-mobile-alt"></i>Malta - +356 99 210 667</a></li>
+            <li><a class="links"><i class="fas fa-mobile-alt"></i>Germany - +49 176 6909 7886</a></li>
+          <ul class="list-unstyled center">
+              <li><a class="address"><i class="fas fa-envelope"></i></li>
               <li>Kuckucksmühle, Ausbau 7,</li>
-              <li> Heiligengrabe, 16909,</li>
-              <li> Brandenburg, Germany</li></a>
-        </ul>
-    </ul>
-
-    </div>
+              <li>Heiligengrabe, 16909,</li>
+              <li>Brandenburg, Germany</li></a>
+          </ul>
+            </ul>
+          </div>
+        </div>
 
 
     <div class="col-md-8" id="resume">
