code tidy up and addition to interest list

--- a/cv.html
+++ b/cv.html
@@ -93,8 +93,7 @@
           <p class="dates">2015 to 2017</p>
           <ul class="job-description">
             <li>case management</li>
-            <li>use xplan to enhance management of tasks,
-effective monitoring of cases and escalation of issues when required</li>
+            <li>use xplan to enhance management of tasks, effective monitoring of cases and escalation of issues when required</li>
             <li>working practices and procedures </li>
             <li>continue working with local management to develop better working practices and procedures,</li>
             <li>provide assistance in the local office for adaptation of work practices to include xplan</li>
@@ -224,6 +223,7 @@ effective monitoring of cases and escalation of issues when required</li>
             <li>Permaculture & organic food production</li>
             <li>Politics & Peaceful Activism</li>
             <li>Open Source software</li>
+            <li>Open Knowledge</li>
             <li>Horse Riding, snorkelling and forest bathing</li>
           </ul>
           <br>
