--- a/index.html
+++ b/index.html
@@ -29,9 +29,6 @@
       <li class="nav-item">
         <a class="nav-link active" href="#">Projects</a>
       </li>
-      <li hidden class="nav-item">
-        <a class="nav-link" href="#">Past experiments</a>
-      </li>
       <li class="nav-item">
         <a class="nav-link" href="cv.html">CV</a>
       </li>
@@ -42,39 +39,33 @@
   </nav>
   <div id="main-page" class="container">
     <br />
-
+    <div class="title">
+      <h3>Web Design Projects</h3>
+    </div>
     <!-- Card deck -->
     <div class="card-deck">
-
       <!-- Card -->
       <div class="card mb-4">
-
         <!--Card image-->
         <div class="view overlay">
-          <img class="card-img-top" src="img/cv.png" alt="Card image cap">
+          <img class="card-img-top" src="img/cv.png" alt="Aimee's CV screenshot">
           <a href="https://aimeefenech.com/cv.html">
             <div class="mask rgba-white-slight"></div>
           </a>
         </div>
-
         <!--Card content-->
         <div class="card-body">
-
           <!--Title-->
           <h4 class="card-title">Aimee's CV</h4>
           <!--Text-->
           <p class="card-text">Personal Curriculum Vitae, using simple HTML5, CSS and Bootsrap,formatted to be easily printed or pdfed as required.</p>
           <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
           <button type="button" class="btn btn-md">Read more</button>
-
         </div>
-
       </div>
       <!-- Card -->
-
       <!-- Card -->
       <div class="card mb-4">
-
         <!--Card image-->
         <div class="view overlay">
           <img class="card-img-top" src="img/ehf1.png" alt="Eco Hacker Farm screenshot">
@@ -82,60 +73,42 @@
             <div class="mask rgba-white-slight"></div>
           </a>
         </div>
-
         <!--Card content-->
         <div class="card-body">
-
           <!--Title-->
           <h4 class="card-title">Eco Hacker Farm</h4>
           <!--Text-->
           <p class="card-text">A Network of projects that combine permaculture with hackerculture, online and onsite. Website mostly hardcoded, built with Bootstrap and some JavaScript.</p>
           <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
           <button type="button" class="btn btn-md">Read more</button>
-
         </div>
-
       </div>
       <!-- Card -->
-
       <!-- Card -->
       <div class="card mb-4">
-
         <!--Card image-->
         <div class="view overlay">
-          <img class="card-img-top" src="img/rl1.png" alt="Card image cap">
+          <img class="card-img-top" src="img/rl1.png" alt="RioLaden website screenshot">
           <a href="https://rioladen-wittstock.de/" target="_blank" class="links">
             <div class="mask rgba-white-slight"></div>
           </a>
         </div>
-
         <!--Card content-->
         <div class="card-body">
-
           <!--Title-->
           <h4 class="card-title">Rio Laden</h4>
           <!--Text-->
           <p class="card-text">Organic & Regional Shop in Wittstock, website built using Wordpress Opensource theme adapted for use case and includes, integrated OSM Map and private forum function.</p>
           <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
           <button type="button" class="btn btn-md">Read more</button>
-
         </div>
-
       </div>
       <!-- Card -->
-
-    </div>
-    <!-- Card deck -->
-    <div class="card-deck">
-
-
-
     </div>
   </div>
-
   <br />
     <footer class="page-footer font-small">
-      <div class="footer-copyright text-center py-3">Website by Aimee Fenech is licensed under a <a class="links" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License.</a>
+      <div class="footer-copyright text-center py-3">Website designed and coded by Aimee Fenech & licensed under a <a class="links" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License.</a>
       </div>
     </footer>
   </div>
