fixed button links

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
           <!--Text-->
           <p class="card-text">Personal Curriculum Vitae, using simple HTML5, CSS and Bootsrap,formatted to be easily printed or pdfed as required.</p>
           <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-          <button type="button" class="btn btn-md">Read more</button>
+          <button type="button" class="btn btn-md"><a target="_blank" href="https://aimeefenech.come/cv.html">
+            See current design</a></button>
         </div>
       </div>
       <!-- Card -->
@@ -80,7 +81,8 @@
           <!--Text-->
           <p class="card-text">A Network of projects that combine permaculture with hackerculture, online and onsite. Website mostly hardcoded, built with Bootstrap and some JavaScript.</p>
           <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-          <button type="button" class="btn btn-md">Read more</button>
+          <button type="button" class="btn btn-md"><a target="_blank" href="https://ecohackerfarm.org/">
+            See current design</a></button>
         </div>
       </div>
       <!-- Card -->
@@ -100,7 +102,8 @@
           <!--Text-->
           <p class="card-text">Organic & Regional Shop in Wittstock, website built using Wordpress Opensource theme adapted for use case and includes, integrated OSM Map and private forum function.</p>
           <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-          <button type="button" class="btn btn-md">Read more</button>
+          <button type="button" class="btn btn-md"><a target="_blank" href="https://rioladen-wittstock.de/">
+            See current design</a></button>
         </div>
       </div>
       <!-- Card -->
