--- a/playground.html
+++ b/playground.html
@@ -50,7 +50,7 @@
         </div>
       </div>
     </a>
-    <a href="https://aimeefenech.com/cv" target="_blank" class="links">
+    <a href="https://aimeefenech.com/cv.html" target="_blank" class="links">
       <div class="card">
       <img class="card-img-top" src="img/cv.png" alt="Card image cap">
       <div class="card-body">
