fixed wrong email text and added experience with edev and rioladen

--- a/cv.html
+++ b/cv.html
@@ -32,7 +32,7 @@
           <ul class="list-unstyled center">
             <li><a href="https://github.com/aimeejulia" target="_blank" class="links"><i class="fab fa-github-square"></i> /aimeejulia</a></li>
             <li><a href="https://www.linkedin.com/in/aimee-fenech-84a3562a/" target="_blank" class="links"><i class="fab fa-linkedin"></i> /aimee-fenech</a></li>
-            <li><a href="mailto:mail@aimeefenech.com"  class="links"><i class="fas fa-at"></i> aimee@ecohackerfarm.org</a>
+            <li><a href="mailto:mail@aimeefenech.com"  class="links"><i class="fas fa-at"></i> mail@aimeefenech.org</a>
             <li><a class="links"><i class="fas fa-mobile-alt"></i>Malta - +356 99 210 667</a></li>
             <li><a class="links"><i class="fas fa-mobile-alt"></i>Germany - +49 176 6909 7886</a></li>
           <ul class="list-unstyled center">
@@ -61,6 +61,32 @@
           <li>public relations & social media managment</li>
           </ul>
 
+          <h5 class="company">Energie Dezent eV</h5>
+          <p class="job-title">Project Manager & Website Editor</p>
+          <p class="dates">2019 to present</p>
+          <ul class="job-description">
+            <li>editorial duties, implementing new pages & content</li>
+            <li>liasing between board memebers and IT professionals for upkeep of the website</li>
+          </ul>
+
+          <h5 class="company">RioLaden - Wittstock</h5>
+          <p class="job-title">Finance Team Lead & Website Developer</p>
+          <p class="dates">2019 to present</p>
+          <ul class="job-description">
+            <li>development of a business plan</li>
+            <li>design and upkeep of the website</li>
+            <li>research and developement of the <a href="https://docs.google.com/presentation/d/1ydgIMdkaB4GPZbxHvvvjPjvjxExNLMErVTsFVWzI17I/edit?usp=sharing">inclusive decision making model</a></li>
+          </ul>
+
+
+          <h5 class="company">Freelance</h5>
+          <p class="job-title">Junior Front End Web Developer</p>
+          <p class="dates">2018 to present</p>
+          <ul class="job-description">
+            <li>website development</li>
+            <li>use current latest web technologies and trends: HTML5 | CSS | Bootstrap | JavaScript</li>
+          </ul>
+
           <h5 class="company">Freelance Consultant for Tech and Startup Companies</h5>
           <p class="job-title">Data Compliance Consultant (GDPR)</p>
           <p class="dates">2016 to present</p>
@@ -70,13 +96,6 @@
             <li>writing and updating company policies, processes and procedures as required</li>
           </ul>
 
-          <h5 class="company">Freelance</h5>
-          <p class="job-title">Junior Front End Web Developer</p>
-          <p class="dates">2018 to present</p>
-          <ul class="job-description">
-            <li>website development</li>
-            <li>use current latest web technologies and trends: HTML5 | CSS | Bootstrap | JavaScript</li>
-          </ul>
 
           <h5 class="company">Freelance</h5>
           <p class="job-title">Permaculture Educator</p>
