--- a/cv.html
+++ b/cv.html
@@ -66,7 +66,7 @@
           <p class="dates">2019 to present</p>
           <ul class="job-description">
             <li>editorial duties, implementing new pages & content</li>
-            <li>liasing between board memebers and IT professionals for upkeep of the website</li>
+            <li>liasing between board members and IT professionals for upkeep of the website</li>
           </ul>
 
           <h5 class="company">RioLaden - Wittstock</h5>
