update with the latest PDC

--- a/cv.html
+++ b/cv.html
@@ -193,9 +193,14 @@
           <h5 class="company">Stonebridge College</h5>
           <p class="course-title">Human Resources Management Diploma</p>
           <p class="dates">2009</p>
+
           <h5 class="company">freeCodeCamp</h5>
           <p class="course-title">Responsive Web Design Certification</p>
           <p class="dates">2018</p>
+
+          <h5 class="company">Permaculture Association UK / Aranya & Klaudia Van Gool</h5>
+          <p class="course-title">Permaculture Design Certificate</p>
+          <p class="dates">2019</p>
 
           <h3 class="section-title">Technical Skills</h3>
           <ul class="list-unstyled general-list">
