updates to color scheme

--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
         <div class="form-group">
           <label for="email">Email address</label>
           <input id="email" type="email" name="email" class="form-control" required  aria-describedby="email">
-          <small class="form-text text-muted">I'll never share your email with anyone else.</small>
+          <small class="form-text text-muted">I'll never share your email address with anyone else without your explicit consent.</small>
         </div>
         <div class="form-group">
           <label for="subject">Subject</label>
