--- a/cv.html
+++ b/cv.html
@@ -20,7 +20,6 @@
 </head>
 
   <body>
-
     <div class="row">
     <div class="col-md-4" id="sidebar">
         <img src="img/aimee.jpeg" alt="Aimee" id="profile-picture">
@@ -29,22 +28,11 @@
         <p id="profile-statement">An experienced data compliance officer and project manager who masters new skills quickly and readily takes up challenges. Specialised in management and co-ordination of teams for projects and target orientated tasks.</p>
         <br />
         <div id="social-media">
-          <ul class="list-unstyled center">
-            <li><a href="https://github.com/aimeejulia" target="_blank" class="links"><i class="fab fa-github-square"></i> /aimeejulia</a></li>
-            <li><a href="https://www.linkedin.com/in/aimee-fenech-84a3562a/" target="_blank" class="links"><i class="fab fa-linkedin"></i> /aimee-fenech</a></li>
-            <li><a href="mailto:mail@aimeefenech.com"  class="links"><i class="fas fa-at"></i> mail@aimeefenech.org</a>
-            <li><a class="links"><i class="fas fa-mobile-alt"></i>Malta - +356 99 210 667</a></li>
-            <li><a class="links"><i class="fas fa-mobile-alt"></i>Germany - +49 176 6909 7886</a></li>
-          <ul class="list-unstyled center">
-              <li><a class="address"><i class="fas fa-envelope"></i></li>
-              <li>Kuckucksmühle, Ausbau 7,</li>
-              <li>Heiligengrabe, 16909,</li>
-              <li>Brandenburg, Germany</li></a>
-          </ul>
-            </ul>
+          <center>
+            <a class="links" href="contact.html" target="_blank">Get in touch</a>
+            </center>
           </div>
         </div>
-
 
     <div class="col-md-8" id="resume">
       <h3 class="section-title">Professional Experience</h3>
@@ -162,6 +150,7 @@
             <li>delivering AML training and maintaining compliance</li>
             <li>managing a team of trainers</li>
           </ul>
+
           <h5 class="company">SMP Partners Ltd.</h5>
           <p class="job-title">Private Client Manager</p>
           <p class="dates">2010</p>
@@ -169,7 +158,6 @@
             <li>providing fiduciary services to a portfolio of clients, including writing power of attorneys, opening bank accounts, document legalisation and resolutions </li>
             <li>debt collecting and following up pending matters </li>
           </ul>
-
 
           <h5 class="company">AXA Isle of Man Ltd.</h5>
           <p class="job-title">Compliance Advisor</p>
@@ -227,7 +215,6 @@
             <li>Permaculture International Research Network</li>
             <li>Permaculture Association</li>
 
-
           <h3 class="section-title">Volunteer Experience</h3>
           <h5 class="company">Hackerspaces.org</h5>
           <p class="course-title">Blog Editor, Project Manager for the Great Census of 2019</p>
@@ -256,7 +243,6 @@
         </ul>
       </div>
 </div>
-
 <footer class="page-footer font-small">
     <div class="footer-copyright text-center py-3"><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /><br></a>Personal Curriculum Vitae by Aimee Fenech is licensed under a <a class="links" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License.</a>
     </div>
@@ -271,5 +257,4 @@
   <!-- MDB core JavaScript -->
   <script type="text/javascript" src="js/mdb.min.js"></script>
 </body>
-
 </html>
