updating color scheme and sm box

--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
       </form>
     </div>
     <br />
-    <footer class="page-footer font-small">
+    <footer class="page-footer font-small footer navbar-fixed-bottom">
       <div class="footer-copyright text-center py-3">Website by Aimee Fenech is licensed under a <a class="links" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License.</a>
       </div>
     </footer>
