--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <!--Text-->
           <p class="card-text">Personal Curriculum Vitae, using simple HTML5, CSS and Bootsrap,formatted to be easily printed or pdfed as required.</p>
           <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-          <button type="button" class="btn btn-md"><a target="_blank" href="https://aimeefenech.come/cv.html">
+          <button type="button" class="btn btn-md"><a target="_blank" href="https://aimeefenech.com/cv.html">
             See current design</a></button>
         </div>
       </div>
