--- a/cv.html
+++ b/cv.html
@@ -39,7 +39,7 @@
       <br>
 
       <h5 class="company">Eco Hacker Farm</h5>
-      <p class="job-title">Founder | Project Manager | Operations Coordinator</p>
+      <p class="job-title">Co-Founder | Project Manager | Operations Coordinator</p>
       <p class="dates">2015 to present</p>
         <ul class="job-description">
           <li>human resource management, acquisition and management of talent</li>
