include new design project ecolodge

--- a/index.html
+++ b/index.html
@@ -107,6 +107,27 @@
         </div>
       </div>
       <!-- Card -->
+      <!-- Card -->
+      <div class="card mb-4">
+        <!--Card image-->
+        <div class="view overlay">
+          <img class="card-img-top" src="img/ecolodge.png" alt="Ecolodge website screenshot">
+          <a href="https://ecolodge.ecohackerfarm.org/" target="_blank" class="links">
+            <div class="mask rgba-white-slight"></div>
+          </a>
+        </div>
+        <!--Card content-->
+        <div class="card-body">
+          <!--Title-->
+          <h4 class="card-title">The Ecolodge</h4>
+          <!--Text-->
+          <p class="card-text">Learning and sharing in community, an eco community space for retreats, courses and workshops. Website built using Wordpress theme adapted for use case and includes, integrated OSM Map, contact form, booking form, gallery and event scheduler.</p>
+          <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
+          <button type="button" class="btn btn-md"><a target="_blank" href="https://ecolodge.ecohackerfarm.org/">
+            See current design</a></button>
+        </div>
+      </div>
+      <!-- Card -->
     </div>
   </div>
   <br />
