--- a/index.html
+++ b/index.html
@@ -43,92 +43,101 @@
       <h3>Web Design Projects</h3>
     </div>
     <!-- Card deck -->
-    <div class="card-deck">
-      <!-- Card -->
-      <div class="card mb-4">
-        <!--Card image-->
-        <div class="view overlay">
-          <img class="card-img-top" src="img/cv.png" alt="Aimee's CV screenshot">
-          <a href="https://aimeefenech.com/cv.html">
-            <div class="mask rgba-white-slight"></div>
-          </a>
+    <div class="row">
+      <div class="col-sm-12 col-md-6 col-lg-4">
+        <!-- Card -->
+        <div class="card mb-2">
+          <!--Card image-->
+          <div class="view overlay">
+            <img class="card-img-top" src="img/cv.png" alt="Aimee's CV screenshot"/>
+            <a href="https://aimeefenech.com/cv.html">
+              <div class="mask rgba-white-slight"></div>
+            </a>
+          </div>
+          <!--Card content-->
+          <div class="card-body">
+            <!--Title-->
+            <h4 class="card-title">Aimee's CV</h4>
+            <!--Text-->
+            <p class="card-text">Personal Curriculum Vitae, using simple HTML5, CSS and Bootsrap,formatted to be easily printed or pdfed as required.</p>
+            <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
+            <button type="button" class="btn btn-md"><a target="_blank" href="https://aimeefenech.com/cv.html">
+              See current design</a></button>
+          </div>
         </div>
-        <!--Card content-->
-        <div class="card-body">
-          <!--Title-->
-          <h4 class="card-title">Aimee's CV</h4>
-          <!--Text-->
-          <p class="card-text">Personal Curriculum Vitae, using simple HTML5, CSS and Bootsrap,formatted to be easily printed or pdfed as required.</p>
-          <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-          <button type="button" class="btn btn-md"><a target="_blank" href="https://aimeefenech.com/cv.html">
-            See current design</a></button>
-        </div>
+        <!-- Card -->
       </div>
-      <!-- Card -->
-      <!-- Card -->
-      <div class="card mb-4">
-        <!--Card image-->
-        <div class="view overlay">
-          <img class="card-img-top" src="img/ehf1.png" alt="Eco Hacker Farm screenshot">
-          <a href="https://ecohackerfarm.org/">
-            <div class="mask rgba-white-slight"></div>
-          </a>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+
+        <!-- Card -->
+        <div class="card mb-2">
+          <!--Card image-->
+          <div class="view overlay">
+            <img class="card-img-top" src="img/ehf1.png" alt="Eco Hacker Farm screenshot">
+            <a href="https://ecohackerfarm.org/">
+              <div class="mask rgba-white-slight"></div>
+            </a>
+          </div>
+          <!--Card content-->
+          <div class="card-body">
+            <!--Title-->
+            <h4 class="card-title">Eco Hacker Farm</h4>
+            <!--Text-->
+            <p class="card-text">A Network of projects that combine permaculture with hackerculture, online and onsite. Website mostly hardcoded, built with Bootstrap and some JavaScript.</p>
+            <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
+            <button type="button" class="btn btn-md"><a target="_blank" href="https://ecohackerfarm.org/">
+              See current design</a></button>
+          </div>
         </div>
-        <!--Card content-->
-        <div class="card-body">
-          <!--Title-->
-          <h4 class="card-title">Eco Hacker Farm</h4>
-          <!--Text-->
-          <p class="card-text">A Network of projects that combine permaculture with hackerculture, online and onsite. Website mostly hardcoded, built with Bootstrap and some JavaScript.</p>
-          <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-          <button type="button" class="btn btn-md"><a target="_blank" href="https://ecohackerfarm.org/">
-            See current design</a></button>
-        </div>
+        <!-- Card -->
       </div>
-      <!-- Card -->
-      <!-- Card -->
-      <div class="card mb-4">
-        <!--Card image-->
-        <div class="view overlay">
-          <img class="card-img-top" src="img/rl1.png" alt="RioLaden website screenshot">
-          <a href="https://rioladen-wittstock.de/" target="_blank" class="links">
-            <div class="mask rgba-white-slight"></div>
-          </a>
+      <div class="col-sm-12 col-md-6 col-lg-4">
+        <!-- Card -->
+        <div class="card mb-2">
+          <!--Card image-->
+          <div class="view overlay">
+            <img class="card-img-top" src="img/rl1.png" alt="RioLaden website screenshot">
+            <a href="https://rioladen-wittstock.de/" target="_blank" class="links">
+              <div class="mask rgba-white-slight"></div>
+            </a>
+          </div>
+          <!--Card content-->
+          <div class="card-body">
+            <!--Title-->
+            <h4 class="card-title">Rio Laden</h4>
+            <!--Text-->
+            <p class="card-text">Organic & Regional Shop in Wittstock, website built using Wordpress Opensource theme adapted for use case and includes, integrated OSM Map and private forum function.</p>
+            <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
+            <button type="button" class="btn btn-md"><a target="_blank" href="https://rioladen-wittstock.de/">
+              See current design</a></button>
+          </div>
         </div>
-        <!--Card content-->
-        <div class="card-body">
-          <!--Title-->
-          <h4 class="card-title">Rio Laden</h4>
-          <!--Text-->
-          <p class="card-text">Organic & Regional Shop in Wittstock, website built using Wordpress Opensource theme adapted for use case and includes, integrated OSM Map and private forum function.</p>
-          <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-          <button type="button" class="btn btn-md"><a target="_blank" href="https://rioladen-wittstock.de/">
-            See current design</a></button>
-        </div>
+        <!-- Card -->
       </div>
-      <!-- Card -->
-      <!-- Card -->
-      <div class="card mb-4">
-        <!--Card image-->
-        <div class="view overlay">
-          <img class="card-img-top" src="img/ecolodge.png" alt="Ecolodge website screenshot">
-          <a href="https://ecolodge.ecohackerfarm.org/" target="_blank" class="links">
-            <div class="mask rgba-white-slight"></div>
-          </a>
+      <div class="col-sm-12 col-md-6 col-lg-4">
+        <!-- Card -->
+        <div class="card mb-2">
+          <!--Card image-->
+          <div class="view overlay">
+            <img class="card-img-top" src="img/ecolodge.png" alt="Ecolodge website screenshot">
+            <a href="https://ecolodge.ecohackerfarm.org/" target="_blank" class="links">
+              <div class="mask rgba-white-slight"></div>
+            </a>
+          </div>
+          <!--Card content-->
+          <div class="card-body">
+            <!--Title-->
+            <h4 class="card-title">The Ecolodge</h4>
+            <!--Text-->
+            <p class="card-text">Learning and sharing in community, an eco community space for retreats, courses and workshops. Website built using Wordpress theme adapted for use case and includes, integrated OSM Map, contact form, booking form, gallery and event scheduler.</p>
+            <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
+            <button type="button" class="btn btn-md"><a target="_blank" href="https://ecolodge.ecohackerfarm.org/">
+              See current design</a></button>
+          </div>
         </div>
-        <!--Card content-->
-        <div class="card-body">
-          <!--Title-->
-          <h4 class="card-title">The Ecolodge</h4>
-          <!--Text-->
-          <p class="card-text">Learning and sharing in community, an eco community space for retreats, courses and workshops. Website built using Wordpress theme adapted for use case and includes, integrated OSM Map, contact form, booking form, gallery and event scheduler.</p>
-          <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-          <button type="button" class="btn btn-md"><a target="_blank" href="https://ecolodge.ecohackerfarm.org/">
-            See current design</a></button>
-        </div>
+        <!-- Card -->
       </div>
-      <!-- Card -->
-    </div>
+  </div>
   </div>
   <br />
     <footer class="page-footer font-small">
