updated link to permaculture page

--- a/playground.html
+++ b/playground.html
@@ -21,6 +21,9 @@
         <a class="nav-link" href="#">Past experiments</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="https://aimeefenech.com/permaculture/">Permaculture</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="cv.html">CV</a>
       </li>
       <li class="nav-item">
