--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         <a class="nav-link active" href="#">Projects</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="https://aimeefenech.com/permaculture/">Permaculture</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="cv.html">CV</a>
       </li>
       <li class="nav-item">
