included dossegarten to the design portfolio

--- a/index.html
+++ b/index.html
@@ -140,6 +140,28 @@
         </div>
         <!-- Card -->
       </div>
+      <div class="col-sm-12 col-md-6 col-lg-4">
+        <!-- Card -->
+        <div class="card mb-2">
+          <!--Card image-->
+          <div class="view overlay">
+            <img class="card-img-top" src="img/dg.png" alt="Dossegarten">
+            <a href="https://www.dossegarten-wittstock.de/" target="_blank" class="links">
+              <div class="mask rgba-white-slight"></div>
+            </a>
+          </div>
+          <!--Card content-->
+          <div class="card-body">
+            <!--Title-->
+            <h4 class="card-title">Dossegarten</h4>
+            <!--Text-->
+            <p class="card-text">The "Dossegarten" is a school and community garden on the edge of the residential area of the Röbel suburb in Wittstock/Dosse. Website built using Wordpress theme adapted for use case and includes, contact form, gallery and blog.</p>
+            <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
+            <button type="button" class="btn btn-md"><a target="_blank" href="https://www.dossegarten-wittstock.de/">
+              See current design</a></button>
+          </div>
+        </div>
+        <!-- Card -->
   </div>
   </div>
   <br />
