updates include integration of kumu maps (interactive ecosystem) termination of position at Rio Laden

--- a/cv.html
+++ b/cv.html
@@ -25,7 +25,7 @@
         <img src="img/aimee.jpeg" alt="Aimee" id="profile-picture">
         <h1 id="name">Aimee Fenech</h1>
         <br />
-        <p id="profile-statement">An experienced data compliance officer and project manager who masters new skills quickly and readily takes up challenges. Specialised in management and co-ordination of teams for projects and target orientated tasks.</p>
+        <p id="profile-statement">An experienced project manager who masters new skills quickly and readily takes up challenges. Specialised in management and co-ordination of teams for projects and target orientated tasks.</p>
         <br />
         <div id="social-media">
           <center>
@@ -33,6 +33,12 @@
             </center>
           </div>
         </div>
+
+    <div class="col-md-8" id="resume">
+      <h3 class="section-title">Dynamic Ecosystem</h3>
+      <br>
+      <iframe src="https://embed.kumu.io/21fc546610843169548d8193a4042f3d" width="940" height="600" frameborder="0"></iframe>
+    </div>
 
     <div class="col-md-8" id="resume">
       <h3 class="section-title">Professional Experience</h3>
@@ -50,22 +56,12 @@
           </ul>
 
           <h5 class="company">Energie Dezent eV</h5>
-          <p class="job-title">Project Manager & Website Editor</p>
+          <p class="job-title">Website Editor</p>
           <p class="dates">2019 to present</p>
           <ul class="job-description">
             <li>editorial duties, implementing new pages & content</li>
             <li>liasing between board members and IT professionals for upkeep of the website</li>
           </ul>
-
-          <h5 class="company">RioLaden - Wittstock</h5>
-          <p class="job-title">Finance Team Lead & Website Developer</p>
-          <p class="dates">2019 to present</p>
-          <ul class="job-description">
-            <li>development of a business plan</li>
-            <li>design and upkeep of the website</li>
-            <li>research and developement of the <a href="https://docs.google.com/presentation/d/1ydgIMdkaB4GPZbxHvvvjPjvjxExNLMErVTsFVWzI17I/edit?usp=sharing">inclusive decision making model</a></li>
-          </ul>
-
 
           <h5 class="company">Freelance</h5>
           <p class="job-title">Junior Front End Web Developer</p>
@@ -92,6 +88,15 @@
             <li>Compost Toilet Design</li>
             <li>Humanure management</li>
             <li>Preservation of food</li>
+          </ul>
+
+          <h5 class="company">RioLaden - Wittstock</h5>
+          <p class="job-title">Finance Team Lead & Website Developer</p>
+          <p class="dates">2019 to 2021</p>
+          <ul class="job-description">
+            <li>development of a business plan</li>
+            <li>design and upkeep of the website</li>
+            <li>research and developement of the <a href="https://docs.google.com/presentation/d/1ydgIMdkaB4GPZbxHvvvjPjvjxExNLMErVTsFVWzI17I/edit?usp=sharing">inclusive decision making model</a></li>
           </ul>
 
           <h5 class="company">Blevins Franks Financial Management Ltd.</h5>
