--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Aimee's Design Portfolio</title>
+  <title>Aimee's Ecology</title>
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
   <!-- Bootstrap core CSS -->
@@ -21,155 +21,75 @@
 
 <body>
   <div class="content">
-  <div id="header">
-    <h2>Aimee's Design Portfolio</h2>
-  </div>
-  <nav>
-    <ul class="nav nav-tabs">
-      <li class="nav-item">
-        <a class="nav-link active" href="#">Projects</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="https://aimeefenech.com/permaculture/">Permaculture</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="cv.html">CV</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="contact.html"><i class="fas fa-envelope"></i></a>
-      </li>
-    </ul>
-  </nav>
-  <div id="main-page" class="container">
-    <br />
-    <div class="title">
-      <h3>Web Design Projects</h3>
-    </div>
-    <!-- Card deck -->
-    <div class="row">
-      <div class="col-sm-12 col-md-6 col-lg-4">
-        <!-- Card -->
-        <div class="card mb-2">
-          <!--Card image-->
-          <div class="view overlay">
-            <img class="card-img-top" src="img/cv.png" alt="Aimee's CV screenshot"/>
-            <a href="https://aimeefenech.com/cv.html">
-              <div class="mask rgba-white-slight"></div>
-            </a>
-          </div>
-          <!--Card content-->
-          <div class="card-body">
-            <!--Title-->
-            <h4 class="card-title">Aimee's CV</h4>
-            <!--Text-->
-            <p class="card-text">Personal Curriculum Vitae, using simple HTML5, CSS and Bootsrap,formatted to be easily printed or pdfed as required.</p>
-            <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-            <button type="button" class="btn btn-md"><a target="_blank" href="https://aimeefenech.com/cv.html">
-              See current design</a></button>
-          </div>
-        </div>
-        <!-- Card -->
+    <div id="main-page" class="container">
+      <div id="header">
+        <h2>Aimee's Ecology</h2>
       </div>
-        <div class="col-sm-12 col-md-6 col-lg-4">
+          <hr>
+      <div class="row">
+        <h3 class="section-title">Dynamic Ecosystem</h3>
+        <br>
+        <iframe src="https://embed.kumu.io/21fc546610843169548d8193a4042f3d" width="940" height="600" frameborder="0"></iframe>
+        <br>
+      </div>
 
-        <!-- Card -->
-        <div class="card mb-2">
-          <!--Card image-->
-          <div class="view overlay">
-            <img class="card-img-top" src="img/ehf1.png" alt="Eco Hacker Farm screenshot">
-            <a href="https://ecohackerfarm.org/">
-              <div class="mask rgba-white-slight"></div>
-            </a>
+      <div id="dynamic-ecosystem">
+        <div class="col-sm-12 col-md-6 col-lg-4">
+          <!-- Card -->
+          <div class="card mb-2">
+            <!--Card image-->
+            <div class="view overlay">
+              <img class="card-img-top" src="img/playgroundscrnshot.jpeg" alt="Web development Projects"/>
+              <a href="webdevprojects.html">
+                <div class="mask rgba-white-slight"></div>
+              </a>
+            </div>
+            <!--Card content-->
+            <div class="card-body">
+              <!--Title-->
+              <h4 class="card-title">Web development projects</h4>
+              <!--Text-->
+              <p class="card-text">Design Potfolio</p>
+              <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
+              <button type="button" class="btn btn-md"><a target="_blank" href="webdevprojects.html">
+                Click here to view portfolio</a></button>
+            </div>
           </div>
-          <!--Card content-->
-          <div class="card-body">
-            <!--Title-->
-            <h4 class="card-title">Eco Hacker Farm</h4>
-            <!--Text-->
-            <p class="card-text">A Network of projects that combine permaculture with hackerculture, online and onsite. Website mostly hardcoded, built with Bootstrap and some JavaScript.</p>
-            <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-            <button type="button" class="btn btn-md"><a target="_blank" href="https://ecohackerfarm.org/">
-              See current design</a></button>
-          </div>
+          <!-- Card -->
         </div>
-        <!-- Card -->
+        <div class="col-sm-12 col-md-6 col-lg-4">
+          <!-- Card -->
+          <div class="card mb-2">
+            <!--Card image-->
+            <div class="view overlay">
+              <img class="card-img-top" src="img/cv.png" alt="Aimee's CV screenshot"/>
+              <a href="https://aimeefenech.com/cv.html">
+                <div class="mask rgba-white-slight"></div>
+              </a>
+            </div>
+            <!--Card content-->
+            <div class="card-body">
+              <!--Title-->
+              <h4 class="card-title">Aimee's CV</h4>
+              <!--Text-->
+              <p class="card-text">Personal Curriculum Vitae</p>
+              <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
+              <button type="button" class="btn btn-md"><a target="_blank" href="https://aimeefenech.com/cv.html">
+                Click here for more info</a></button>
+            </div>
+          </div>
+          <!-- Card -->
+        </div>
       </div>
-      <div class="col-sm-12 col-md-6 col-lg-4">
-        <!-- Card -->
-        <div class="card mb-2">
-          <!--Card image-->
-          <div class="view overlay">
-            <img class="card-img-top" src="img/rl1.png" alt="RioLaden website screenshot">
-            <a href="https://rioladen-wittstock.de/" target="_blank" class="links">
-              <div class="mask rgba-white-slight"></div>
-            </a>
-          </div>
-          <!--Card content-->
-          <div class="card-body">
-            <!--Title-->
-            <h4 class="card-title">Rio Laden</h4>
-            <!--Text-->
-            <p class="card-text">Organic & Regional Shop in Wittstock, website built using Wordpress Opensource theme adapted for use case and includes, integrated OSM Map and private forum function.</p>
-            <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-            <button type="button" class="btn btn-md"><a target="_blank" href="https://rioladen-wittstock.de/">
-              See current design</a></button>
-          </div>
-        </div>
-        <!-- Card -->
-      </div>
-      <div class="col-sm-12 col-md-6 col-lg-4">
-        <!-- Card -->
-        <div class="card mb-2">
-          <!--Card image-->
-          <div class="view overlay">
-            <img class="card-img-top" src="img/ecolodge.png" alt="Ecolodge website screenshot">
-            <a href="https://ecolodge.ecohackerfarm.org/" target="_blank" class="links">
-              <div class="mask rgba-white-slight"></div>
-            </a>
-          </div>
-          <!--Card content-->
-          <div class="card-body">
-            <!--Title-->
-            <h4 class="card-title">The Ecolodge</h4>
-            <!--Text-->
-            <p class="card-text">Learning and sharing in community, an eco community space for retreats, courses and workshops. Website built using Wordpress theme adapted for use case and includes, integrated OSM Map, contact form, booking form, gallery and event scheduler.</p>
-            <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-            <button type="button" class="btn btn-md"><a target="_blank" href="https://ecolodge.ecohackerfarm.org/">
-              See current design</a></button>
-          </div>
-        </div>
-        <!-- Card -->
-      </div>
-      <div class="col-sm-12 col-md-6 col-lg-4">
-        <!-- Card -->
-        <div class="card mb-2">
-          <!--Card image-->
-          <div class="view overlay">
-            <img class="card-img-top" src="img/dg.png" alt="Dossegarten">
-            <a href="https://www.dossegarten-wittstock.de/" target="_blank" class="links">
-              <div class="mask rgba-white-slight"></div>
-            </a>
-          </div>
-          <!--Card content-->
-          <div class="card-body">
-            <!--Title-->
-            <h4 class="card-title">Dossegarten</h4>
-            <!--Text-->
-            <p class="card-text">The "Dossegarten" is a school and community garden on the edge of the residential area of the Röbel suburb in Wittstock/Dosse. Website built using Wordpress theme adapted for use case and includes, contact form, gallery and blog.</p>
-            <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-            <button type="button" class="btn btn-md"><a target="_blank" href="https://www.dossegarten-wittstock.de/">
-              See current design</a></button>
-          </div>
-        </div>
-        <!-- Card -->
+    </div>
+  </div >
+
+
+<footer class="page-footer font-small">
+  <div class="footer-copyright text-center py-3">Website designed and coded by Aimee Fenech & licensed under a <a class="links" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License.</a>
   </div>
-  </div>
-  <br />
-    <footer class="page-footer font-small">
-      <div class="footer-copyright text-center py-3">Website designed and coded by Aimee Fenech & licensed under a <a class="links" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License.</a>
-      </div>
-    </footer>
-  </div>
+</footer>
+
   <!-- SCRIPTS -->
   <!-- JQuery -->
   <script type="text/javascript" src="js/jquery-3.4.0.min.js"></script>
