redesign of cards under the dynamic ecosystem

--- a/index.html
+++ b/index.html
@@ -26,14 +26,36 @@
         <h2>Aimee's Ecology</h2>
       </div>
           <hr>
-      <div class="row">
         <h3 class="section-title">Dynamic Ecosystem</h3>
         <br>
+        <div id="dynamic-ecosystem">
         <iframe src="https://embed.kumu.io/21fc546610843169548d8193a4042f3d" width="940" height="600" frameborder="0"></iframe>
         <br>
       </div>
-
-      <div id="dynamic-ecosystem">
+        <div class="row">
+          <div class="col-sm-12 col-md-6 col-lg-4">
+            <!-- Card -->
+            <div class="card mb-2">
+              <!--Card image-->
+              <div class="view overlay">
+                <img class="card-img-top" src="img/aimeespermaculture.png" alt="Aimee's Permaculture"/>
+                <a href="https://aimeefenech.com/permaculture.html">
+                  <div class="mask rgba-white-slight"></div>
+                </a>
+              </div>
+              <!--Card content-->
+              <div class="card-body">
+                <!--Title-->
+                <h4 class="card-title">Aimee's Permaculture</h4>
+                <!--Text-->
+                <p class="card-text">Permaculture Articles, Designs, Events and Resources</p>
+                <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
+                <button type="button" class="btn btn-md"><a target="_blank" href="https://aimeefenech.com/permaculture.html">
+                  Find out more</a></button>
+              </div>
+            </div>
+            <!-- Card -->
+          </div>
         <div class="col-sm-12 col-md-6 col-lg-4">
           <!-- Card -->
           <div class="card mb-2">
@@ -84,8 +106,8 @@
     </div>
   </div >
 
-
 <footer class="page-footer font-small">
+  <br />
   <div class="footer-copyright text-center py-3">Website designed and coded by Aimee Fenech & licensed under a <a class="links" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License.</a>
   </div>
 </footer>
